# betti-discovery

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: quickstart.py
math_discovery/: __init__.py  __main__.py  common.py  config.py  conjecturing_agent.py  evaluate.py  feature_extractor.py  mathworld_env.py  run_training.py  skeptical_agent.py  surface_data_gen.py
tests/: test_core.py
